cloud/bmaas/webug: render multiline tags correctly in machine view
Change-Id: Ibaee208e01131a3b34d59368bb4718127a5f0d8a
Reviewed-on: https://review.monogon.dev/c/monogon/+/1538
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/cloud/bmaas/bmdb/webug/templates/machine.html
+++ b/cloud/bmaas/bmdb/webug/templates/machine.html
@@ -38,7 +38,7 @@
                     <b>{{ .Type.NativeName }}:</b>
                 </td>
                 <td class="mono">
-                    {{ .HumanValue }}
+                    <pre>{{ .HumanValue }}</pre>
                 </td>
             </tr>
             {{ end }}
