c/b/b/webug: add tag count table
Change-Id: I9662f00629335a656c401f66c798575f7db57842
Reviewed-on: https://review.monogon.dev/c/monogon/+/1583
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/cloud/bmaas/bmdb/webug/templates/machines.html
+++ b/cloud/bmaas/bmdb/webug/templates/machines.html
@@ -31,6 +31,18 @@
     </tr>
     {{ end -}}
 </table>
+<table>
+    <tr>
+        {{ range $name, $count := .TagCount -}}
+        <th>{{ $name }}</th>
+        {{ end -}}
+    </tr>
+    <tr>
+        {{ range $name, $count := .TagCount -}}
+        <td>{{ $count }}</td>
+        {{ end -}}
+    </tr>
+</table>
 <p class="small faint mono">
     {{ .NMachines }} rows, rendered in {{ .RenderTime }}. Query: {{ .Query }}
 </p>
