cloud/bmaas/bmdb/webug: rename .html to .gohtml
IntelliJ doesn't like overriding the type manually,
so lets just stick to their standard.

Change-Id: Ie533d884b06c62d6da6b8504051737b239fb8489
Reviewed-on: https://review.monogon.dev/c/monogon/+/1645
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/webug/templates/base.gohtml
+++ b/cloud/bmaas/bmdb/webug/templates/base.gohtml
@@ -53,8 +53,9 @@
         border-spacing: 0.2em;
     }
 
-    /* Colouring of the Work History log in machine.html. */
-    tr.EventFailed td, tr.EventCanceled td {
+    /* Colouring of the Work History log in machine.gohtml. */
+    tr.EventFailed td,
+    tr.EventCanceled td {
         background-color: #f8e8e8;
     }
     tr.EventFinished td {
