cloud/bmaas/bmdb/webug: add location tag to host list
Change-Id: I86e00fe3534cdc62fef73931647f15d6346ea1bf
Reviewed-on: https://review.monogon.dev/c/monogon/+/1646
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/webug/templates/fragment_tag_provided.gohtml
+++ b/cloud/bmaas/bmdb/webug/templates/fragment_tag_provided.gohtml
@@ -1,3 +1,4 @@
 {{- $provider := (.Field "provider").HumanValue }}
 {{- $pid := (.Field "provider_id").HumanValue }}
-<b>{{ .Type.Name }}</b>({{- $provider }}, <a href="/provider/{{ $provider }}/{{ $pid }}" style="font-family: mono">{{ $pid }}</a>)
+{{- $location := (.Field "provider_location").HumanValue }}
+<b>{{ .Type.Name }}</b>({{- $provider }}, {{ $location }}, <a href="/provider/{{ $provider }}/{{ $pid }}" style="font-family: mono">{{ $pid }}</a>)
