cloud/bmaas/bmdb/webug: add color coding for host status
To allow easier understanding of a backoff without opening the machine itself,
its handy to have a color coding for the provider host status. Currently it only displays
running as green and everything else as red, but that should be fine for now.

Change-Id: I5f16cd6a0b14dc595c94f6ca1e647d3ba1f21d95
Reviewed-on: https://review.monogon.dev/c/monogon/+/1647
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/webug/templates/base.gohtml
+++ b/cloud/bmaas/bmdb/webug/templates/base.gohtml
@@ -62,6 +62,18 @@
         background-color: #e8f8e8;
     }
 
+    /* Colouring of the Machine State in fragment_tag_provided.gohtml. */
+    b.StatusMissing,
+    b.StatusProvisioning,
+    b.StatusProvisioningFailedPermanent,
+    b.StatusStopped
+    {
+        color: red;
+    }
+    b.StatusRunning {
+        color: green;
+    }
+
     /* Generic font style tags for any element. */
     .small {
         font-size: 0.8em;
