cloud/bmaas/bmdb/webug: Add provider ip address to webug
Change-Id: Ic0b2767ef6b8dd86b158119e6e109c5acb406121
Reviewed-on: https://review.monogon.dev/c/monogon/+/2297
Reviewed-by: Serge Bazanski <serge@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/webug/templates/fragment_tag_provided.gohtml
+++ b/cloud/bmaas/bmdb/webug/templates/fragment_tag_provided.gohtml
@@ -2,4 +2,5 @@
 {{- $pid := (.Field "provider_id").HumanValue }}
 {{- $location := (.Field "provider_location").HumanValue }}
 {{- $status := (.Field "provider_status").HumanValue }}
-<b class="Status{{ $status }}">{{ .Type.Name }}</b>({{- $provider }}, {{ $location }}, <a href="/provider/{{ $provider }}/{{ $pid }}" style="font-family: mono">{{ $pid }}</a>)
+{{- $address := (.Field "provider_ip_address").HumanValue }}
+<b class="Status{{ $status }}">{{ .Type.Name }}</b>({{- $provider }}, {{ $location }}, {{ $address }}, <a href="/provider/{{ $provider }}/{{ $pid }}" style="font-family: mono">{{ $pid }}</a>)
